// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Edit Mode renders correctly 1`] = `
<Dialog
  confirmText="Save"
  confirmTranslationId="global.save"
  isOpen={true}
  onCancel={[MockFunction onCancel]}
  onConfirm={[MockFunction onConfirm]}
  shouldDisableAllButtons={false}
  shouldUnmountOnHide={true}
  title="Edit Address"
>
  <FormError
    classes={
      Object {
        "root": "errorContainer",
      }
    }
    errors={Array []}
  />
  <div
    className="root"
  >
    <div
      className="firstname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="firstname"
        >
          First Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="5a420105-1854-414a-b92b-e4c5da48325e"
              name="firstname"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="middlename"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="middlename"
        >
          Middle Name
          <span
            className="optional"
          >
            <mock-FormattedMessage
              defaultMessage="Optional"
              id="field.optional"
            />
          </span>
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="8aadb5e4-55dc-4480-810f-7d44c9453208"
              name="middlename"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="lastname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="lastname"
        >
          Last Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="edbdbf61-fdd5-4265-bce9-e75c1b1b47e5"
              name="lastname"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="country"
    >
      <Country
        field="country_code"
        validate={[Function]}
      />
    </div>
    <div
      className="street1"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="street1"
        >
          Street Address
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="971dfb54-e8a7-48e0-8187-4c60a143f047"
              name="street[0]"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="street2"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="street2"
        >
          Street Address 2
          <span
            className="optional"
          >
            <mock-FormattedMessage
              defaultMessage="Optional"
              id="field.optional"
            />
          </span>
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="fe3a7be0-d8d6-4d3e-969a-0322f715a958"
              name="street[1]"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="city"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="city"
        >
          City
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="65919823-34e8-4162-8be1-7569119057db"
              name="city"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="region"
    >
      <Region
        countryCodeField="country_code"
        fieldInput="region[region]"
        fieldSelect="region[region_id]"
        optionValueKey="id"
        validate={[Function]}
      />
    </div>
    <div
      className="postcode"
    >
      <Postcode
        validate={[Function]}
      />
    </div>
    <div
      className="telephone"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="telephone"
        >
          Phone Number
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="6898f87b-d37f-46ca-851b-4d05fdcb23ed"
              name="telephone"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="default_address_check"
    >
      <label
        className="root"
        htmlFor="6ebef52e-f978-43e7-b470-77599f4e4dd7"
      >
        <input
          checked={false}
          className="input"
          id="6ebef52e-f978-43e7-b470-77599f4e4dd7"
          name="default_shipping"
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="icon"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
          </svg>
        </span>
        <span
          className="label"
        >
          Make this my default address
        </span>
      </label>
      <p
        className="root"
      />
    </div>
  </div>
</Dialog>
`;

exports[`Edit Mode renders correctly with errors 1`] = `
<Dialog
  confirmText="Save"
  confirmTranslationId="global.save"
  isOpen={true}
  onCancel={[MockFunction onCancel]}
  onConfirm={[MockFunction onConfirm]}
  shouldDisableAllButtons={false}
  shouldUnmountOnHide={true}
  title="Edit Address"
>
  <FormError
    classes={
      Object {
        "root": "errorContainer",
      }
    }
    errors={
      Array [
        "Unit Test Error 1",
        "Unit Test Error 2",
      ]
    }
  />
  <div
    className="root"
  >
    <div
      className="firstname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="firstname"
        >
          First Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="b9f8f14a-6a8f-4e42-bf0f-4714a67c125e"
              name="firstname"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="middlename"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="middlename"
        >
          Middle Name
          <span
            className="optional"
          >
            <mock-FormattedMessage
              defaultMessage="Optional"
              id="field.optional"
            />
          </span>
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="c112adf3-6353-4871-b844-1e727cc2a017"
              name="middlename"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="lastname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="lastname"
        >
          Last Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="1136250e-00e7-4f61-a281-2c14b4ff6132"
              name="lastname"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="country"
    >
      <Country
        field="country_code"
        validate={[Function]}
      />
    </div>
    <div
      className="street1"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="street1"
        >
          Street Address
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="98b8de7e-5d04-41d5-9916-5deb77861c72"
              name="street[0]"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="street2"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="street2"
        >
          Street Address 2
          <span
            className="optional"
          >
            <mock-FormattedMessage
              defaultMessage="Optional"
              id="field.optional"
            />
          </span>
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="29ab85ae-7c1f-4875-a7c8-82326d359b04"
              name="street[1]"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="city"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="city"
        >
          City
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="14abfeaf-a1f9-4193-a819-e74b7ad4496b"
              name="city"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="region"
    >
      <Region
        countryCodeField="country_code"
        fieldInput="region[region]"
        fieldSelect="region[region_id]"
        optionValueKey="id"
        validate={[Function]}
      />
    </div>
    <div
      className="postcode"
    >
      <Postcode
        validate={[Function]}
      />
    </div>
    <div
      className="telephone"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="telephone"
        >
          Phone Number
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="80e90e43-3429-430a-895d-e25095a0e535"
              name="telephone"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="default_address_check"
    >
      <label
        className="root"
        htmlFor="cd40df54-c2b9-49f3-93ae-142a937b5efe"
      >
        <input
          checked={false}
          className="input"
          id="cd40df54-c2b9-49f3-93ae-142a937b5efe"
          name="default_shipping"
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="icon"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
          </svg>
        </span>
        <span
          className="label"
        >
          Make this my default address
        </span>
      </label>
      <p
        className="root"
      />
    </div>
  </div>
</Dialog>
`;

exports[`renders correctly 1`] = `
<Dialog
  confirmText="Save"
  confirmTranslationId="global.save"
  isOpen={true}
  onCancel={[MockFunction onCancel]}
  onConfirm={[MockFunction onConfirm]}
  shouldDisableAllButtons={false}
  shouldUnmountOnHide={true}
  title="New Address"
>
  <FormError
    classes={
      Object {
        "root": "errorContainer",
      }
    }
    errors={Array []}
  />
  <div
    className="root"
  >
    <div
      className="firstname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="firstname"
        >
          First Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="afc45910-d3f1-4d56-96c8-53245d0f04cc"
              name="firstname"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="middlename"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="middlename"
        >
          Middle Name
          <span
            className="optional"
          >
            <mock-FormattedMessage
              defaultMessage="Optional"
              id="field.optional"
            />
          </span>
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="9c782406-9518-4417-861b-f158ebbfd394"
              name="middlename"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="lastname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="lastname"
        >
          Last Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="415fbb3a-fe6c-465a-bcda-948478e0c101"
              name="lastname"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="country"
    >
      <Country
        field="country_code"
        validate={[Function]}
      />
    </div>
    <div
      className="street1"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="street1"
        >
          Street Address
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="2e862dab-3547-4edf-b912-3b9f364b754e"
              name="street[0]"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="street2"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="street2"
        >
          Street Address 2
          <span
            className="optional"
          >
            <mock-FormattedMessage
              defaultMessage="Optional"
              id="field.optional"
            />
          </span>
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="71bd084b-1524-4d34-81d7-055a44973276"
              name="street[1]"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="city"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="city"
        >
          City
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="01432f63-53a4-4a26-b721-910dfff3e752"
              name="city"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="region"
    >
      <Region
        countryCodeField="country_code"
        fieldInput="region[region]"
        fieldSelect="region[region_id]"
        optionValueKey="id"
        validate={[Function]}
      />
    </div>
    <div
      className="postcode"
    >
      <Postcode
        validate={[Function]}
      />
    </div>
    <div
      className="telephone"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="telephone"
        >
          Phone Number
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="4ad4b04d-08e9-4e43-b892-5ab9b8661d52"
              name="telephone"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="default_address_check"
    >
      <label
        className="root"
        htmlFor="81a4d3fb-8d59-42ef-a90c-e80ef0a7eef6"
      >
        <input
          checked={false}
          className="input"
          id="81a4d3fb-8d59-42ef-a90c-e80ef0a7eef6"
          name="default_shipping"
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="icon"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
          </svg>
        </span>
        <span
          className="label"
        >
          Make this my default address
        </span>
      </label>
      <p
        className="root"
      />
    </div>
  </div>
</Dialog>
`;

exports[`renders correctly with errors 1`] = `
<Dialog
  confirmText="Save"
  confirmTranslationId="global.save"
  isOpen={true}
  onCancel={[MockFunction onCancel]}
  onConfirm={[MockFunction onConfirm]}
  shouldDisableAllButtons={false}
  shouldUnmountOnHide={true}
  title="New Address"
>
  <FormError
    classes={
      Object {
        "root": "errorContainer",
      }
    }
    errors={
      Array [
        "Unit Test Error 1",
        "Unit Test Error 2",
      ]
    }
  />
  <div
    className="root"
  >
    <div
      className="firstname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="firstname"
        >
          First Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="1c3d201d-7c1a-4240-8f1f-a5f207d7f422"
              name="firstname"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="middlename"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="middlename"
        >
          Middle Name
          <span
            className="optional"
          >
            <mock-FormattedMessage
              defaultMessage="Optional"
              id="field.optional"
            />
          </span>
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="6869056b-53a8-4e2f-bd5f-c64bd91c9359"
              name="middlename"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="lastname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="lastname"
        >
          Last Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="d1035dad-0048-4c68-b846-08edc29995fc"
              name="lastname"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="country"
    >
      <Country
        field="country_code"
        validate={[Function]}
      />
    </div>
    <div
      className="street1"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="street1"
        >
          Street Address
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="94b0b49f-c400-4d38-9bc0-c34fabcf06b2"
              name="street[0]"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="street2"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="street2"
        >
          Street Address 2
          <span
            className="optional"
          >
            <mock-FormattedMessage
              defaultMessage="Optional"
              id="field.optional"
            />
          </span>
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="38195ceb-e2df-476b-83ab-b8731fcc6141"
              name="street[1]"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="city"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="city"
        >
          City
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="b5cc98a8-3554-4ef0-9de9-3245d872cb85"
              name="city"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="region"
    >
      <Region
        countryCodeField="country_code"
        fieldInput="region[region]"
        fieldSelect="region[region_id]"
        optionValueKey="id"
        validate={[Function]}
      />
    </div>
    <div
      className="postcode"
    >
      <Postcode
        validate={[Function]}
      />
    </div>
    <div
      className="telephone"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="telephone"
        >
          Phone Number
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="d9de4027-5057-4269-ad26-313198deb34f"
              name="telephone"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="default_address_check"
    >
      <label
        className="root"
        htmlFor="150a21d1-2841-46e7-a6c9-2f85d40dd647"
      >
        <input
          checked={false}
          className="input"
          id="150a21d1-2841-46e7-a6c9-2f85d40dd647"
          name="default_shipping"
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="icon"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
          </svg>
        </span>
        <span
          className="label"
        >
          Make this my default address
        </span>
      </label>
      <p
        className="root"
      />
    </div>
  </div>
</Dialog>
`;
